--- a/src/app.html
+++ b/src/app.html
@@ -12,6 +12,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 		<meta name="theme-color" content="#DEF1FF" />
+		<meta name="description">
+		svelte is a JavaScript library for building user interfaces.
+		tesseract.js tailwind
+	</meta>
 		%svelte.head%
 	</head>
 	<body>
