--- a/src/app.html
+++ b/src/app.html
@@ -12,12 +12,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 		<meta name="theme-color" content="#DEF1FF" />
+
 		<meta
 			name="description"
 			content="svelte is a JavaScript library for building user interfaces.
 		tesseract.js tailwind"
 		/>
-
+		<style>
+			body {
+				background-color: black;
+			}
+		</style>
 		%svelte.head%
 	</head>
 	<body>
