--- a/src/app.html
+++ b/src/app.html
@@ -20,7 +20,7 @@
 		/>
 		<style>
 			body {
-				background-color: black;
+				background-color: rgb(17 24 39);
 			}
 			#splash {
 				position: absolute;
