--- a/src/app.html
+++ b/src/app.html
@@ -34,10 +34,10 @@
 				font-size: large;
 			}
 		</style>
-		%svelte.head%
+		%sveltekit.head%
 	</head>
 	<body>
 		<div id="splash">im a splash Screen</div>
-		<div id="svelte">%svelte.body%</div>
+		<div id="svelte">%sveltekit.body%</div>
 	</body>
 </html>
